# DS2024

./: .gitignore  CMakeLists.txt  Makefile  README.md
exp1/: Complex.cpp  Fib.h  Fib1.h  Makefile  Vector.cpp  exp1.c++  main  main.cpp  main1  main1.cpp
exp2/: CMakeLists.txt  Makefile  heights.hpp  main.cpp  main2  main2.cpp
exp3/: CMakeLists.txt  Makefile  main  main.cpp  word.txt
exp4/: CMakeLists.txt  main  main.cpp
exp5/: CMakeLists.txt  main  main.cpp  time.hpp
lib/Bintree/: BInTree.hpp  BinNode.cpp  BinNode.hpp  BinTree.cpp  BinTree.hpp  Binmap.hpp  Bitmap.hpp  CMakeLists.txt  Makefile
lib/Complex/: Complex.cpp  Complex.h
lib/Dictionary/: CMakeLists.txt  Dictionary.hpp  Hashtable.cpp  Hashtable.hpp  Makefile
lib/Graph/: CMakeLists.txt  graph.cpp  graph.hpp
lib/Huff/: CMakeLists.txt  HuffChar.hpp  HuffCode.cpp  HuffCode.hpp  HuffForest.cpp  HuffForest.hpp  Hufftable.hpp  Makefile
lib/List/: CMakeLists.txt  List.cpp  List.hpp  ListNode.hpp  Makefile  Queue.hpp
lib/PQ/: CMakeLists.txt  PQ.hpp  PQ_ComplHeap.cpp  PQ_ComplHeap.hpp
lib/Stack/: CMakeLists.txt  Makefile  Stack.hpp
lib/Vector/: CMakeLists.txt  Complex.hpp  Fib.cpp  Fib.hpp  Makefile  Stack.cpp  Stack.hpp  Vector.cpp  Vector.h  stack.hpp
